--- a/login_project/Style/index.css
+++ b/login_project/Style/index.css
@@ -3,6 +3,11 @@ body{
     margin: auto;
 }
 
-h1, h2, h3{
+h1, h2, h3, h4{
     text-align: center;
+}
+
+button, input{
+    margin-right: 10px;
+    margin-left: 10px;
 }
